--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: I Am Willia
+title: I Am William
 subtitle: ''
 description: ''
 keywords:
